# Adaptive-Huffman

./: .travis.yml  CMakeLists.txt  Doxyfile.in  Makefile  README.md
doc/: Doxyfile  mainpage.dox
inc/: bitdump.h  bititerator.h  buffer.h  node.h  node.hpp  tree.h  tree.hpp
res/: shakespeare.txt.huffed  silver_sebright.bmp.huffed  term.png.huffed
src/: main.cc  main.cpp  node.cpp  node.hpp  tree.cpp  tree.hpp
src/lib/: bitdump.cc  buffer.cc  node.cc  tree.cc
test/: buffer_test.cc  compression_test.cc  cpp_sorter_test.cpp  tree_test.cc  tree_test.cpp
